revenue/k8s/revenue.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: revenue-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app.microfrontend
    http:
      paths:
        - path: /namespace/revenue/?(.*)
          backend:
            serviceName: revenue-svc
            servicePort: 3333
